finished mobile layout

--- a/index.html
+++ b/index.html
@@ -586,8 +586,9 @@
           <div class="form-input form-input--mb1">
             <label class="form-input__label" for="user-name">
 
-              <span class="form-input__label--text">Имя</span>
-              <input class="form-input__inner" type="text" name="user-name" id="user-name" autocomplete="name" />
+              <span class="form-input__label--text form-input__label--text-small">Имя</span>
+              <input class="form-input__inner form-input__border-light" type="text" name="user-name" id="user-name"
+                autocomplete="name" />
 
               <span class="form-input__icon">
                 <svg class="icon icon--user">
@@ -602,8 +603,9 @@
           <div class="form-input form-input--mb1">
             <label class="form-input__label" for="user-tel">
 
-              <span class="form-input__label--text">Телефон</span>
-              <input class="form-input__inner" type="tel" name="user-tel" id="user-tel" autocomplete="tel" />
+              <span class="form-input__label--text form-input__label--text-small">Телефон</span>
+              <input class="form-input__inner form-input__border-light" type="tel" name="user-tel" id="user-tel"
+                autocomplete="tel" />
               <span class="form-input__icon">
                 <svg class="icon icon--phone">
                   <use href="./images/icons.svg#icon-phone"></use>
@@ -617,8 +619,9 @@
           <div class="form-input form-input--mb1">
             <label class="form-input__label" for="user-email">
 
-              <span class="form-input__label--text">Почта</span>
-              <input class="form-input__inner" type="email" name="user-email" id="user-email" autocomplete="email" />
+              <span class="form-input__label--text form-input__label--text-small">Почта</span>
+              <input class="form-input__inner form-input__border-light" type="email" name="user-email" id="user-email"
+                autocomplete="email" />
               <span class="form-input__icon">
                 <svg class="icon icon--envelope">
                   <use href="./images/icons.svg#icon-envelope"></use>
@@ -631,8 +634,9 @@
           <!-- comment input -->
           <div class="form-input form-input--mb2">
             <label class="form-input__label" for="user-comment">
-              <span class="form-input__label--text">Комментарий</span>
-              <textarea class="form-input__textarea" name="user-comment" id="user-comment" rows="7"
+              <span class="form-input__label--text form-input__label--text-small">Комментарий</span>
+              <textarea class="form-input__textarea form-input__border-light" name="user-comment" id="user-comment"
+                rows="7"
                 placeholder="Введите текст"></textarea>
             </label>
           </div>
@@ -643,7 +647,7 @@
               <input class="checkbox checkbox-hidden" type="checkbox" name="user-aggregant" id="user-aggrement" />
 
               <span class="form-input__icon form-input__icon--checkbox">
-                <svg class="icon">
+                <svg class="icon icon-checkbox">
                   <use href="./images/icons.svg#icon-checked"></use>
                 </svg>
               </span>
@@ -654,7 +658,7 @@
             </label>
           </div>
 
-          <button type="submit" class="button button--accent button--padding5">Отправить</button>
+          <button type="submit" class="button button__primary button--padding5">Отправить</button>
 
         </form>
 
@@ -743,7 +747,8 @@
           <label class="form-input__label--footer" for="user-email">
             <span class="studio-socials__title form-input__label-text form-input__label--text-footer">Подпишитесь на
               рассылку</span>
-            <input class="form-input__inner form-input__inner--footer" type="email" name="user-email" id="user-email"
+            <input class="form-input__inner form-input__inner--footer form-input__border-dark" type="email"
+              name="user-email" id="user-email"
               placeholder="E-mail" />
           </label>
 
