fixed form layout

--- a/index.html
+++ b/index.html
@@ -587,7 +587,7 @@
             <label class="form-input__label" for="user-name">
 
               <span class="form-input__label--text form-input__label--text-small">Имя</span>
-              <input class="form-input__inner form-input__border-light" type="text" name="user-name" id="user-name"
+              <input class="form-input__inner form-input__light" type="text" name="user-name" id="user-name"
                 autocomplete="name" />
 
               <span class="form-input__icon">
@@ -604,7 +604,7 @@
             <label class="form-input__label" for="user-tel">
 
               <span class="form-input__label--text form-input__label--text-small">Телефон</span>
-              <input class="form-input__inner form-input__border-light" type="tel" name="user-tel" id="user-tel"
+              <input class="form-input__inner form-input__light" type="tel" name="user-tel" id="user-tel"
                 autocomplete="tel" />
               <span class="form-input__icon">
                 <svg class="icon icon--phone">
@@ -620,7 +620,7 @@
             <label class="form-input__label" for="user-email">
 
               <span class="form-input__label--text form-input__label--text-small">Почта</span>
-              <input class="form-input__inner form-input__border-light" type="email" name="user-email" id="user-email"
+              <input class="form-input__inner form-input__light" type="email" name="user-email" id="user-email"
                 autocomplete="email" />
               <span class="form-input__icon">
                 <svg class="icon icon--envelope">
@@ -635,7 +635,7 @@
           <div class="form-input form-input--mb2">
             <label class="form-input__label" for="user-comment">
               <span class="form-input__label--text form-input__label--text-small">Комментарий</span>
-              <textarea class="form-input__textarea form-input__border-light" name="user-comment" id="user-comment"
+              <textarea class="form-input__textarea form-input__light" name="user-comment" id="user-comment"
                 rows="7"
                 placeholder="Введите текст"></textarea>
             </label>
@@ -747,7 +747,7 @@
           <label class="form-input__label--footer" for="user-email">
             <span class="studio-socials__title form-input__label-text form-input__label--text-footer">Подпишитесь на
               рассылку</span>
-            <input class="form-input__inner form-input__inner--footer form-input__border-dark" type="email"
+            <input class="form-input__inner form-input__inner--footer form-input__dark" type="email"
               name="user-email" id="user-email"
               placeholder="E-mail" />
           </label>
