--- a/portfolio.html
+++ b/portfolio.html
@@ -339,7 +339,7 @@
             <label class="form-input__label--footer" for="user-email">
               <span class="studio-socials__title form-input__label-text form-input__label--text-footer">Подпишитесь на
                 рассылку</span>
-              <input class="form-input__inner form-input__inner--footer form-input__border-dark" type="email"
+              <input class="form-input__inner form-input__inner--footer form-input__dark" type="email"
                 name="user-email" id="user-email" placeholder="E-mail" />
             </label>
 
