add medium styles

--- a/index.html
+++ b/index.html
@@ -668,9 +668,9 @@
   <!-- Form on backdrop End -->
 
   <!-- footer start -->
-  <footer class="footer">
+  <footer class="footer page-section page-section--dark">
 
-    <div class="container container--flex page-section page-section--dark">
+    <div class="container container--flex">
 
       <div class="footer-block footer-block--address footer-block--mr70">
 
