--- a/portfolio.html
+++ b/portfolio.html
@@ -411,9 +411,9 @@
   </main>
 
   <!-- footer start -->
-  <footer class="footer">
+  <footer class="footer page-section page-section--dark">
 
-    <div class="container container--flex page-section page-section--dark">
+    <div class="container container--flex">
 
       <div class="footer-block footer-block--address footer-block--mr70">
 
