--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
             <li class="nav__item"><a href="#" class="nav__link">Контакты</a></li>
           </ul>
         </nav>
-        <ul class="contacts">
+        <ul class="contacts contacts--header">
           <li class="contacts__item contacts__item--header">
             <a href="mailto:info@devstudio.com" class="contacts__link">
               <svg class="contacts__icon">
@@ -147,7 +147,7 @@
     <!-- peculiarities end -->
 
     <!-- our-work start -->
-    <section class="page-section page-section__our-works">
+    <section class="page-section__our-works">
       <div class="container">
 
         <h2 class="page-section__title">Чем мы занимаемся</h2>
@@ -642,7 +642,7 @@
           </div>
 
           <!-- checkbox input -->
-          <div class="form-input form-input--mb3">
+          <div class="form-input form-input--p form-input--mb3">
             <label class="form-input__label form-input__label--checkbox" for="user-aggrement">
               <input class="checkbox checkbox-hidden" type="checkbox" name="user-aggregant" id="user-aggrement" />
 
