--- a/portfolio.html
+++ b/portfolio.html
@@ -44,7 +44,7 @@
             <li class="nav__item"><a href="#" class="nav__link">Контакты</a></li>
           </ul>
         </nav>
-        <ul class="contacts">
+        <ul class="contacts contacts--header">
           <li class="contacts__item contacts__item--header">
             <a href="mailto:info@devstudio.com" class="contacts__link">
               <svg class="contacts__icon">
@@ -66,9 +66,10 @@
     </div>
   </header>
   <!-- Header end -->
+
   <main class="main-content">
     <section class="portfolio page-section page-section--padding">
-      <div class="container">
+      <div class="container container__fixed">
         <h2 class="portfolio-title visually-hidden">Portfolio</h2>
 
         <ul class="portfolio-nav">
@@ -109,7 +110,7 @@
 
                 <source srcset="./images/our-projects/prj-techno-crack_370x294@1x.jpg 370w,
                                 ./images/our-projects/prj-techno-crack_370x294@2x.jpg 740w"
-                          sizes="(min-width: 1200px) 270px, 25vw"
+                          sizes="(min-width: 1200px) 370px, 25vw"
                           media="(min-width: 1200px)">
 
                 <img src="./images/our-projects/prj-techno-crack_370x294.jpg" alt="Страница сайта Технокряк"
@@ -146,7 +147,7 @@
 
                   <source srcset="./images/our-projects/prj-basketball-poster_370x294@1x.jpg 370w,
                                   ./images/our-projects/prj-basketball-poster_370x294@2x.jpg 740w"
-                    sizes="(min-width: 1200px) 270px, 25vw" media="(min-width: 1200px)">
+                    sizes="(min-width: 1200px) 370px, 25vw" media="(min-width: 1200px)">
 
                   <img src="./images/our-projects/prj-basketball-poster_370x294.jpg" alt="Постер баскетбольного матча"
                     class="project-image" />
@@ -181,7 +182,7 @@
 
                   <source srcset="./images/our-projects/prj-seafood-restaurant_370x294@1x.jpg 370w,
                                   ./images/our-projects/prj-seafood-restaurant_370x294@2x.jpg 740w"
-                    sizes="(min-width: 1200px) 270px, 25vw" media="(min-width: 1200px)">
+                    sizes="(min-width: 1200px) 370px, 25vw" media="(min-width: 1200px)">
 
                   <img src="./images/our-projects/prj-seafood-restaurant_370x294.jpg" alt="Логотип ресторана Seafood"
                     class="project-image" />
@@ -215,7 +216,7 @@
 
                   <source srcset="./images/our-projects/prj-headphones-prime_370x294@1x.jpg 370w,
                                   ./images/our-projects/prj-headphones-prime_370x294@2x.jpg 740w"
-                    sizes="(min-width: 1200px) 270px, 25vw" media="(min-width: 1200px)">
+                    sizes="(min-width: 1200px) 370px, 25vw" media="(min-width: 1200px)">
 
                   <img src="./images/our-projects/prj-headphones-prime_370x294.jpg" alt="Наушники Prime"
                     class="project-image" />
@@ -249,7 +250,7 @@
 
                   <source srcset="./images/our-projects/prj-boxes_370x294@1x.jpg 370w,
                                   ./images/our-projects/prj-boxes_370x294@2x.jpg 740w"
-                    sizes="(min-width: 1200px) 270px, 25vw" media="(min-width: 1200px)">
+                    sizes="(min-width: 1200px) 370px, 25vw" media="(min-width: 1200px)">
 
                   <img src="./images/our-projects/prj-boxes_370x294.jpg" alt="Две красивые упаковки"
                     class="project-image" />
@@ -284,7 +285,7 @@
 
                   <source srcset="./images/our-projects/prj-website-noborders_370x294@1x.jpg 370w,
                                   ./images/our-projects/prj-website-noborders_370x294@2x.jpg 740w"
-                    sizes="(min-width: 1200px) 270px, 25vw" media="(min-width: 1200px)">
+                    sizes="(min-width: 1200px) 370px, 25vw" media="(min-width: 1200px)">
 
                   <img src="./images/our-projects/prj-website-noborders_370x294.jpg"
                     alt="Страница сайта Inspiration has no Borders"
@@ -319,7 +320,7 @@
 
                   <source srcset="./images/our-projects/prj-limited-edition_370x294@1x.jpg 370w,
                                   ./images/our-projects/prj-limited-edition_370x294@2x.jpg 740w"
-                    sizes="(min-width: 1200px) 270px, 25vw" media="(min-width: 1200px)">
+                    sizes="(min-width: 1200px) 370px, 25vw" media="(min-width: 1200px)">
 
                   <img src="./images/our-projects/prj-limited-edition_370x294.jpg"
                     alt="Разворот журнала Limited Edition" class="project-image" />
@@ -351,9 +352,9 @@
                                 ./images/our-projects/prj-label-tag_354x294@2x.jpg 700w"
                     sizes="(max-width: 1199px) 354px, 50vw" media="(max-width: 1199px)">
 
-                  <source srcset="./images/our-projects/prj-label-tag_370x294@1x.jpg 370w,
-                                  ./images/our-projects/prj-label-tag_370x294@2x.jpg 740w"
-                    sizes="(min-width: 1200px) 270px, 25vw" media="(min-width: 1200px)">
+                  <source srcset="./images/our-projects/prj-label-tag_370x294@1x.png 370w,
+                                  ./images/our-projects/prj-label-tag_370x294@2x.png 740w"
+                    sizes="(min-width: 1200px) 370px, 25vw" media="(min-width: 1200px)">
 
                   <img src="./images/our-projects/prj-label-tag_370x294.jpg" alt="Название бренда LAB на лейбле"
                     class="project-image" />
@@ -386,7 +387,7 @@
                     media="(max-width: 1199px)">
 
                   <source srcset="./images/our-projects/prj-growing-business_370x294@1x.jpg 370w,
-                                  ./images/our-projects/prj-growing-business_370x294@2x.jpg 740w" sizes="(min-width: 1200px) 270px, 25vw"
+                                  ./images/our-projects/prj-growing-business_370x294@2x.jpg 740w" sizes="(min-width: 1200px) 370px, 25vw"
                     media="(min-width: 1200px)">
 
                   <img src="./images/our-projects/prj-growing-business_370x294.jpg"alt="Страница приложения Growing Business"
