--- a/portfolio.html
+++ b/portfolio.html
@@ -352,8 +352,8 @@
                                 ./images/our-projects/prj-label-tag_354x294@2x.jpg 700w"
                     sizes="(max-width: 1199px) 354px, 50vw" media="(max-width: 1199px)">
 
-                  <source srcset="./images/our-projects/prj-label-tag_370x294@1x.png 370w,
-                                  ./images/our-projects/prj-label-tag_370x294@2x.png 740w"
+                  <source srcset="./images/our-projects/prj-label-tag_370x294@1x.jpg 370w,
+                                  ./images/our-projects/prj-label-tag_370x294@2x.jpg 740w"
                     sizes="(min-width: 1200px) 370px, 25vw" media="(min-width: 1200px)">
 
                   <img src="./images/our-projects/prj-label-tag_370x294.jpg" alt="Название бренда LAB на лейбле"
