--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
 <body>
 
-  <!-- Header start -->
+  <!-- Header start 1 -->
   <header class="header">
     <div class="container header__container">
       <!-- Main nav -->
