--- a/portfolio.html
+++ b/portfolio.html
@@ -16,7 +16,7 @@
     <link rel="stylesheet" href="./css/modern-normalize.min.css" />
     <link rel="stylesheet" href="./css/main.min.css" />
 
-    <title>GOIT-markup: 💯Portfolio</title>
+    <title>Web-studio(РГР)</title>
   </head>
   <!-- Google tag (gtag.js) -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=G-W5DWD0RNGE"></script>
